--- a/index.html
+++ b/index.html
@@ -1,34 +1,90 @@
 <!-- Contact Form -->
-<form id="contact-form">
-  <!-- Your Name -->
-  <label for="from_name">Your Name</label>
-  <input
-    type="text"
-    id="from_name"
-    name="from_name"
-    placeholder="Name"
-    required
-  />
+<style>
+  /* General Form Styling */
+  #contact-form {
+    max-width: 600px;
+    margin: 50px auto;
+    background: #ffffff;
+    padding: 40px;
+    border-radius: 12px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
 
-  <!-- Company Name -->
+  #contact-form label {
+    display: block;
+    margin-bottom: 6px;
+    font-weight: 600;
+    color: #333;
+    font-size: 14px;
+  }
+
+  #contact-form input,
+  #contact-form select,
+  #contact-form textarea {
+    width: 100%;
+    padding: 12px 15px;
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    font-size: 14px;
+    transition: all 0.3s ease;
+  }
+
+  #contact-form input:focus,
+  #contact-form select:focus,
+  #contact-form textarea:focus {
+    border-color: #4f46e5; /* Indigo focus */
+    box-shadow: 0 0 8px rgba(79, 70, 229, 0.3);
+    outline: none;
+  }
+
+  #contact-form textarea {
+    min-height: 120px;
+    resize: vertical;
+  }
+
+  #contact-form button {
+    background: #4f46e5;
+    color: white;
+    border: none;
+    padding: 14px 25px;
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    width: 100%;
+  }
+
+  #contact-form button:hover {
+    background: #4338ca;
+    transform: translateY(-2px);
+    box-shadow: 0 6px 12px rgba(79, 70, 229, 0.3);
+  }
+
+  /* Responsive */
+  @media (max-width: 640px) {
+    #contact-form {
+      padding: 30px 20px;
+      margin: 20px;
+    }
+  }
+</style>
+
+<form id="contact-form">
+  <label for="from_name">Your Name</label>
+  <input type="text" id="from_name" name="from_name" placeholder="Name" required />
+
   <label for="company">Company Name</label>
   <input type="text" id="company" name="company" placeholder="Company" />
 
-  <!-- Email Address -->
   <label for="email">Email Address</label>
-  <input
-    type="email"
-    id="email"
-    name="email"
-    placeholder="example@mail.com"
-    required
-  />
+  <input type="email" id="email" name="email" placeholder="example@mail.com" required />
 
-  <!-- Phone Number -->
   <label for="phone">Phone Number</label>
   <input type="text" id="phone" name="phone" placeholder="+1 (234) 456-7899" />
 
-  <!-- Preferred Contact Method -->
   <label for="contact_method">Preferred Contact Method</label>
   <select id="contact_method" name="contact_method">
     <option value="Call">Call</option>
@@ -36,45 +92,26 @@
     <option value="WhatsApp">WhatsApp</option>
   </select>
 
-  <!-- Message -->
   <label for="message">How can we help you?</label>
-  <textarea
-    id="message"
-    name="message"
-    placeholder="Your message"
-    required
-  ></textarea>
+  <textarea id="message" name="message" placeholder="Your message" required></textarea>
 
-  <!-- Submit -->
-  <button type="submit">Send</button>
+  <button type="submit">Send Message</button>
 </form>
 
 <!-- EmailJS Script -->
-<script
-  type="text/javascript"
-  src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"
-></script>
-<script type="text/javascript">
-  (function () {
-    // ✅ Replace with your EmailJS public key
-    emailjs.init("g2PMv1JlYOT9esRdx");
-  })();
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script>
+  emailjs.init("g2PMv1JlYOT9esRdx");
 
-  // Form submission
-  document
-    .getElementById("contact-form")
-    .addEventListener("submit", function (event) {
-      event.preventDefault();
+  document.getElementById("contact-form").addEventListener("submit", function (event) {
+    event.preventDefault();
 
-      // ✅ Replace with your actual SERVICE ID and TEMPLATE ID
-      emailjs.sendForm("service_2xda8fm", "template_bkj91ol", this).then(
-        function () {
-          alert("✅ Message sent successfully!");
-          document.getElementById("contact-form").reset(); // clear form
-        },
-        function (error) {
-          alert("❌ Failed to send message: " + JSON.stringify(error));
-        }
-      );
-    });
+    emailjs.sendForm("service_2xda8fm", "template_bkj91ol", this)
+      .then(function () {
+        alert("✅ Message sent successfully!");
+        document.getElementById("contact-form").reset();
+      }, function (error) {
+        alert("❌ Failed to send message: " + JSON.stringify(error));
+      });
+  });
 </script>
